@@ -144,7 +144,8 @@ class Contents(Transform):
     default_priority = 380
 
     def apply(self):
-        language = languages.get_language(self.document.settings.language_code)
+        language = languages.get_language(self.document.settings.language_code,
+                                          self.document.reporter)
         name = language.labels['contents']
         title = nodes.title('', name)
         topic = nodes.topic('', title, classes=['contents'])
